--- a/.github/workflows/pytest_workflow.yml
+++ b/.github/workflows/pytest_workflow.yml
@@ -1,28 +1,23 @@
 name: Python TDD with Pytest
-
-on:
+'on':
   push:
     branches:
-      - main  # Replace with the branch you want to trigger the workflow
-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x  # Choose your Python version
-
+          python-version: 3.x
       - name: Install Dependencies
-        run: |
+        run: >
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Replace with your requirements file if applicable
 
+          pip install -r requirements.txt  # Replace with your requirements file
+          if applicable
       - name: Run Tests
         run: pytest
-
