--- a/.github/workflows/pytest_workflow.yml
+++ b/.github/workflows/pytest_workflow.yml
@@ -1,23 +1,27 @@
 name: Python TDD with Pytest
-'on':
+on:
   push:
     branches:
-      - main
+      - main  # Replace with your branch name
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
-      - name: Install Dependencies
-        run: >
-          python -m pip install --upgrade pip
+          python-version: 3.x  # Choose your Python version
 
-          pip install -r requirements.txt  # Replace with your requirements file
-          if applicable
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Replace with your requirements file if applicable
+
       - name: Run Tests
         run: pytest
+
