--- a/.github/workflows/pytest_workflow.yml
+++ b/.github/workflows/pytest_workflow.yml
@@ -1,4 +1,5 @@
-name: Python TDD with Pytest
+name: CI/CD Pipeline
+
 on:
   push:
     branches:
@@ -21,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # Replace with your requirements file if applicable
+          pip install pytest  # Install pytest
 
       - name: Run Tests
         run: pytest
